plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	set('testcontainersVersion', "1.16.2")
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
//	implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'io.projectreactor:reactor-test'
//	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
	testImplementation('org.junit.jupiter:junit-jupiter-params:5.8.1')
	testImplementation 'org.mockito:mockito-core:3.12.4'
	// https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.0-M1'

	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'


//	testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
//	mockito-junit-jupiter
// https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
	testImplementation 'org.mockito:mockito-junit-jupiter:4.6.0'

//	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'



}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

//tasks.named('test') {
//	useJUnitPlatform()
//}
//
//test {
//	useJUnitPlatform()
//}
//tasks.test {
//	useJUnitPlatform()
//}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}